Alpha preparation (#109)
* Update documentation for alpha

* Update docs

* Change wording

* Fix supported platforms for android to remove 32bit

* update windows command lines

* update dependencies

* fix my mess

* fix align

* Fix godot version

* Start with publishing plugin

* Update gpg key secrets and release mode detection

* Improve plugin config

* Change token environment variable to deploy intellij plugin

* Fix publication and add test impl to godot-library

* Use grgit and git tags to define version and releaseMode

* Require full version in tag including godot version

* Add release ci workflow

* Create trigger release workflow

* Move workflow in backup while creating release CI because it takes ages

* Add gradle plugin deployment to maven central CI

* Add godot-library publication and cleanup publication setup

* Rename files and add godot editor release build and upload workflow

* Re add pr checks

* Use multithreading for scons builds

* Set project name and description in pom

* Add signing env variables to necessary pr checks

* Remove jvm-godot-resource-serialization and use dependency on sonatype instead

* Fix issues mentioned by jetbrains

* Remove sonatype maven repo in favor of maven central in intellij plugin

* Add deploy intellij plugin workflow

* Add engine build and run commands

* Update plugin dependencies and don't require restart

* Remove deprecated constructor usage

* Rename job

* Use alpha channel for ide plugin

* Update kotlin and gradle and remove jcenter

* Update detekt dependency to use mavenCentral

* Add gradlePluginPortal for shadow

* Fix formatting and explicitly ignore swallowed exceptions for plugin

* Add vendor url and email and update changelog

* Remove unnecessary comment

* update vendor url to utopia-rise's github

* Set plugin deploy to alpha channel when SNAPSHOT, stable for release

* Add support for 2021.1 and 